# OSLab

./: README.md
TermProject/: CMakeLists.txt
TermProject/doc/: report.odt
TermProject/include/: jobs.hpp  jobs_validator.hpp
TermProject/src/: main.cpp
lab1/doc/: report.odt
lab1/src/: WriteRead.cpp
lab2/: CMakeLists.txt  main.cpp  test.cpp
lab2/doc/: report_2.odt
lab2/include/: func.h  points.h
lab3/doc/: report.odt
lab3/src/: CMakeLists.txt  main.cpp
lab4/doc/: report_4.odt
lab4/src/: first.c  first.h  second.c  second.h  test_dynamic.c  test_static.c
lab5/: CMakeLists.txt
lab5/doc/: report_5.odt
lab5/src/: calculation_node.cpp  control.cpp  zmq_std.hpp
lab8/doc/: .~lock.report.odt#  report.odt
